# strava-coach-bot

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway-mcp.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_training_plans.py
src/: config.py  main.py
src/bot/: conversation.py
src/bot/handlers/: expense.py  reminder.py  start.py
src/db/: session.py
src/llm/: base.py  gemini.py  groq_llm.py  parser.py  prompts.py  tools.py
src/mcp/: server.py
src/models/: expense.py  reminder.py  training_plan.py
src/services/: expense.py  reminder.py  strava.py  training_plan.py  weekly_checkin.py
tests/: conftest.py  test_expense.py  test_llm.py  test_reminder.py
